--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "kid-score-app",
   "version": "1.0.0",
@@ -11,7 +10,8 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
